2019-05-09  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-bookmark.el (w3m-bookmark-add): Bugfix: Order of args to function
	string-match. Message text tweak.
	(w3m-bookmark-add-all-urls): Operate in all display modes, only ask for
	section once, provide sane default section, don't add bookmarks
	buffers, auto-refresh existing bookmark buffers, improve error
	handling, add tab character to whitespace regexp, use set-buffer
	instead of switch-to-buffer.

2019-05-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-configuration): Add a missing parameter
	to the w3m-filter-prefer-lazy-images section ([emacs-w3m:13396]).

2019-05-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-prefer-lazy-images): New filter that
	prefers a lazy image specified with data-src= rather than that of
	src= in img tags.
	(w3m-filter-configuration): Add it.

2019-05-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-browse-url): Refresh the already existing page if it
	is older than the site and the new arg REFRESH-IF-EXISTS is given.
	Off-list suggested by Dan Jacobson <jidanni@jidanni.org>.

2019-05-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m--goto-torrent-url): Change dependency
	`transmission-remote-cli' from required to recommended, and update
	documentation accordingly.

2019-05-05  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m--goto-torrent-url): New feature to support torrent and
	magnet links, using for now external programs from the `transmission'
	suite.
	(w3m-goto-url): Integrate the new feature.

2019-05-03  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m--message): BUGFIX: was occassionally silently crashing in
	a process handler, requiring the buffer process to be manually stopped.

	* w3m.el, w3m-download.el: bugfix: resolve recursive load error due to
	placement of call to w3m--download-init, and symbol error due to use of
	variable w3m-profile-directory.

2019-05-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
