@@ -1,3 +1,8 @@
+2019-05-19  Boruch Baum  <boruch_baum@gmx.com>
+
+	* w3m.el (w3m-new-session-in-background, w3m-goto-url-new-session):
+	update documentation for clarity and for use of prefix arguemnt.
+
 2019-05-09  Boruch Baum  <boruch_baum@gmx.com>
 
 	* w3m-bookmark.el (w3m-bookmark-add): Bugfix: Order of args to function
